# Self-Driving-Documentation-Improver

./: .gitignore  AGENTS.md  INSTRUCTIONS.md  LICENSE  MIGRATION_V2.md  README.md  README_SIMPLE.md  pyproject.toml  requirements.txt
config/: example-config.yaml
examples/: README.md  sample_code.py  working_example.py
examples/test_project/: calculator.py
src/doc_improver/: __init__.py  cli.py  models.py
src/doc_improver/analyzer/: __init__.py  gap_detector.py
src/doc_improver/cli/: __init__.py  interactive.py  main.py  main_v2.py  simple_cli.py
src/doc_improver/explorer/: __init__.py  base_analyzer.py  code_explorer.py  code_explorer_simple.py  code_explorer_v2.py  javascript_analyzer.py  python_analyzer.py  web_explorer.py
src/doc_improver/generator/: __init__.py  doc_generator.py
src/doc_improver/integrations/: claude_client.py  claude_client_v2.py
src/doc_improver/utils/: ast_rewriter.py  cache.py  config_manager.py  git_integration.py  logger.py  metrics.py
tests/: __init__.py  test_code_explorer.py  test_gap_detector.py  test_integration.py
